<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.innovatech.urgence.views.MainActivity">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llcontainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tabPatient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bt_add_patient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_patient" />

                    <Button
                        android:id="@+id/bt_list_patient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/liste_patients" />


                    <Button
                        android:id="@+id/bt_delete_patient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_patient" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabMedecin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bt_add_medecin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_doctor" />

                 <Button
                        android:id="@+id/bt_list_medecin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/list_doctors" />

                    <Button
                        android:id="@+id/bt_delete_medecin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_a_doctor" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/tabAmbulance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bt_add_ambulencier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_an_ambulance" />

                 <Button
                        android:id="@+id/bt_list_ambulencier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/list_ambulances" />

                    <Button
                        android:id="@+id/bt_delete_ambulencier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_an_ambulance" />


                </LinearLayout>


            </FrameLayout>
        </LinearLayout>
    </TabHost>

   </RelativeLayout>
