<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText
            android:id="@+id/txt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:hint="@string/enter_phone_number"
            android:padding="10dp" />


        <EditText
            android:id="@+id/txt_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/enter_patient_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txt_residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/enter_your_address"
            android:padding="10dp" />



        <Button
            android:id="@+id/bt_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update" />



    </LinearLayout>